--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,20 @@
     <title>
       Customized Holiday Packages, Honeymoon & Vacation Packages - tour On
     </title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-W6TXEMF113"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-W6TXEMF113');
+    </script>
   </head>
   <body>
     <div id="root"></div>
