--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
       Customized Holiday Packages, Honeymoon & Vacation Packages - tour On
     </title>
     <!-- Google tag (gtag.js) -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-W6TXEMF113"
     ></script>
@@ -79,11 +79,43 @@
       gtag('js', new Date());
 
       gtag('config', 'G-W6TXEMF113');
+    </script> -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-793441297"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'AW-793441297');
+    </script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-5SNM5HJ');
     </script>
   </head>
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-5SNM5HJ"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
 
     <!-- <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
